--- a/payloads/Config/v0.6.3/config.plist
+++ b/payloads/Config/v0.6.3/config.plist
@@ -211,6 +211,24 @@
 				<string>Contents/Info.plist</string>
 			</dict>
 			<dict>
+ 				<key>Arch</key>
+ 				<string>x86_64</string>
+ 				<key>Comment</key>
+ 				<string>Process Blocker</string>
+ 				<key>Enabled</key>
+ 				<true/><!--RestrictEvents-->
+ 				<key>MaxKernel</key>
+ 				<string></string>
+ 				<key>MinKernel</key>
+ 				<string></string>
+ 				<key>BundlePath</key>
+ 				<string>RestrictEvents.kext</string>
+ 				<key>ExecutablePath</key>
+ 				<string>Contents/MacOS/RestrictEvents</string>
+ 				<key>PlistPath</key>
+ 				<string>Contents/Info.plist</string>
+ 			</dict>
+			<dict>
 				<key>Arch</key>
 				<string>x86_64</string>
 				<key>Comment</key>
